salesforce-overview-practical-examples/force-app/main/default/objects/Flight__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights_Arrival</relationshipName>
    <type>Lookup</type>
</CustomField>