salesforce-overview-practical-examples/force-app/main/default/objects/Flight__c/fields/IATA_Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>IATA_Arrival_Airport__c</fullName>
    <formula>Arrival_Airport__r.IATA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IATA Arrival Airport</label>
    <type>Text</type>
</CustomField>