salesforce-overview-practical-examples/force-app/main/default/objects/Flight__c/fields/IATA_Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>IATA_Departure_Airport__c</fullName>
    <formula>Departure_Airport__r.IATA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IATA Departure Airport</label>
    <type>Text</type>
</CustomField>