salesforce-overview-practical-examples/force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IATA_Arrival_Airport__c</columns>
    <columns>IATA_Departure_Airport__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>